tests/cases/compiler/stringReplaceAll/index.ts
let a = "abcde".replaceAll("hello");
//~^ ERROR: Expected 2 arguments, but got 1.
let b = "abcde".replaceAll("hello", "world");